# EPAM-Cpp-Mentoring

./: .gitignore  README.md
Drafts/Radiosonde_finder/: CMakeLists.txt  main.cpp  main.qml
Drafts/Radiosonde_finder/BaloonDataContainer/: BaloonDataContainer.cpp  BaloonDataContainer.h
Drafts/minimal_map/: Bu1tton.qml  CMakeLists.txt  main.cpp  main.qml  minimal_map.pro  qml.qrc
Drafts/test_udp_connection/: CMakeLists.txt  packetListener.cpp  sendPacket.cpp
Practical-tasks/Task-1/: CMakeLists.txt  README.md  hello_world.cpp
Practical-tasks/Task-2/: CMakeLists.txt  README.md
Radiosonde-finder/: CMakeLists.txt
Radiosonde-finder/src/: CMakeLists.txt  GpsData.cpp  GpsData.h  TelemetryData.cpp  TelemetryData.h  TimeData.cpp  TimeData.h  main.cpp
Radiosonde-finder/src/Gps/: GpsData.cpp  GpsData.h
Radiosonde-finder/src/Telemetry/: TelemetryData.cpp  TelemetryData.h
Radiosonde-finder/src/Time/: TimeData.cpp  TimeData.h
Radiosonde-finder/test/: tools.cpp  tools.h
